# cube_sort_ws

./: .gitignore  README.md  dockerfile  run.sh
.github/workflows/: build.yml
docs/: robot_v1_urdf_guide.md  world_v1_sdf_guide.md
src/arm_description/: CMakeLists.txt
src/arm_description/launch/: arm_description.launch.py
src/arm_description/urdf/: arm_basic.urdf
src/arm_teleop/: CMakeLists.txt  package.xml
src/arm_teleop/src/: arm_teleop_keyboard.cpp
src/color_classifier/: package.xml  setup.cfg  setup.py
src/color_classifier/color_classifier/: classifier_node.py  model.py
src/color_detector/: CMakeLists.txt  package.xml
src/dataset_collector/: package.xml  setup.cfg  setup.py
src/dataset_collector/dataset_collector/: collector_node.py
src/install/: local_setup.sh  setup.sh
src/install/mobile_description/share/mobile_description/: package.sh
src/install/mobile_world/share/mobile_world/: package.sh
src/install/mobile_world/share/mobile_world/worlds/: test_world.sdf
src/log/: latest_build
src/mobile/: CMakeLists.txt  package.xml
src/mobile/include/mobile/: color_utils.hpp
src/mobile/src/launch/: launch.py
src/mobile/src/src/: color_follower.cpp
src/mobile/src/world/: test_world.sdf
src/mobile_description/: CMakeLists.txt
src/mobile_description/launch/: robot.launch.py
src/mobile_description/urdf/: robot_v1.urdf
src/mobile_world/: CMakeLists.txt
src/mobile_world/launch/: world.launch.py
src/mobile_world/worlds/: world_v1.sdf
src/project_w/src/launch/: launch.py
src/project_w/src/world/: building_robot.sdf
