<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile</name>
  <version>1.0.0</version>
  <description>
    Color Follower – учебный пакет для демонстрации обработки изображений и управления 
    мобильным роботом в Gazebo. Робот движется вдоль цветных кубов и выводит название 
    распознанного цвета в консоль.
  </description>
  <maintainer email="bazarbaevsabit@gmail.com">Bazarbaev Sabit</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>